Bug 1719327 - Block webrender on Vivante GC7000UL devices. r=jrmuizel, a=RyanVM

Webrender crashes during draw calls on this GPU. Move users to
software webrender instead.

Differential Revision: https://phabricator.services.mozilla.com/D137666