widget/android/GfxInfo.cpp
@@ -599,6 +599,11 @@ nsresult GfxInfo::GetFeatureStatusImpl(
       const bool isPowerVrG6110 =
           mGLStrings->Renderer().Find("PowerVR Rogue G6110",
                                       /* ignoreCase */ true) >= 0;
+
+      const bool isVivanteGC7000UL =
+          mGLStrings->Renderer().Find("Vivante GC7000UL",
+                                      /* ignoreCase */ true) >= 0;
+
       if (isMali4xx) {
         // Mali 4xx does not support GLES 3.
         *aStatus = nsIGfxInfo::FEATURE_BLOCKED_DEVICE;
@@ -607,6 +612,10 @@ nsresult GfxInfo::GetFeatureStatusImpl(
         // Blocked on PowerVR Rogue G6110 due to bug 1742986 and bug 1717863.
         *aStatus = nsIGfxInfo::FEATURE_BLOCKED_DEVICE;
         aFailureId = "FEATURE_FAILURE_POWERVR_G6110";
+      } else if (isVivanteGC7000UL) {
+        // Blocked on Vivante GC7000UL due to bug 1719327.
+        *aStatus = nsIGfxInfo::FEATURE_BLOCKED_DEVICE;
+        aFailureId = "FEATURE_FAILURE_VIVANTE_GC7000UL";
       } else {
         *aStatus = nsIGfxInfo::FEATURE_ALLOW_QUALIFIED;
       }
